kubernetes/tcm.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcm
  labels:
    app: tcm
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  selector:
    app: tcm
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tcm
  namespace: default
spec:
  selector:
    matchLabels:
      app: tcm
  serviceName: tcm-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: tcm
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: tcm-app
        image: idock.daumkakao.io/mongo/tc:TCM
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: tc-config
          mountPath: /etc/config
      volumes:
        - name: tc-config
          configMap:
            name: tc-meta
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcm-ingress
  namespace: default
spec:
  rules:
  - host: hostname or ip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tcm
            port:
              number: 5000
